css formatting consistency

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 /*
  * Custom overrides for BookReader Demo.
  */
-body{
-	background-color:#f5f5f5;
+body {
+	background-color: #f5f5f5;
 }
 /* Hide print and embed functionality */
 #BRtoolbar .embed, .print {
@@ -24,20 +24,20 @@ a.logo {
     width: 100px;
 }
 
-.BRfloatHead{
+.BRfloatHead {
 	background-color: #4e5b63;
 }
 
-#cboxContent{
+#cboxContent {
 	border: 10px solid #4e5b63;
 }
 
 #BRcontainer {
-	background-color:#f5f5f5;
+	background-color: #f5f5f5;
 }
 
 #BRpageview {
-    background-color:#f5f5f5;
+    background-color: #f5f5f5;
 }
 
 #BRreturn a, .BRfloatFoot a {
@@ -50,46 +50,46 @@ a.logo {
 }
 
 .BRicon {
-	background-color:transparent;
+	background-color: transparent;
     background-image: url(../cca-images/BRicons.png);
-	background-repeat:no-repeat;
+	background-repeat: no-repeat;
 }
 
 .BRfloat a.floatShut {
-	background-image:url("../cca-images/icon_close-pop.png");
+	background-image: url("../cca-images/icon_close-pop.png");
 }
 
 .BRemptypage {
-	background-image:url("../cca-images/paper.png");
+	background-image: url("../cca-images/paper.png");
 }
 
-/* 
+/*
 	Opener section in case there are no parameters in the URL
 */
-#opener{
+#opener {
 	margin: 5em auto;
 	width: 90%;
 	height: 50em;
 	border:1px solid rgba(125,125,125,.5);
-	background-color:white;
+	background-color: #fff;
     font-family: "Lucida Grande","Arial",sans-serif;
 }
 
-#opener img{
-	display:block;
+#opener img {
+	display: block;
 	margin:3em auto;
 }
 
-#opener p{
-	margin:0 auto;
-	width:500px;
-	font-size:1.2em;
-	line-height:1.7em;
+#opener p {
+	margin: 0 auto;
+	width: 500px;
+	font-size: 1.2em;
+	line-height: 1.7em;
 }
 
-#opener h1{
-	width:500px;
-	font-size:1.55em;
+#opener h1 {
+	width: 500px;
+	font-size: 1.55em;
 	margin: .5em auto;
 	text-transform: uppercase;
 }
