--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ a.logo {
 }
 
 /*
-	Opener section in case there are no parameters in the URL
+	
+ section in case there are no parameters in the URL
 */
 #opener {
 	margin: 5em auto;
@@ -93,4 +94,21 @@ a.logo {
 	font-size: 1.55em;
 	margin: .5em auto;
 	text-transform: uppercase;
+}
+
+@media all and (max-width:1100px) {
+	#openerLogo {
+		margin: 0 auto;
+		max-width:95%;
+	}
+}
+
+@media all and (max-width: 700px) {
+	#openerLogo {
+		background: url("../cca-images/ccatheme_logo_small.gif")
+	}
+	#opener p, #opener h1 {
+		width:auto;
+		padding: 0 1.5em 0;
+		}
 }
