--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,18 @@
 /*
  * Custom overrides for BookReader Demo.
  */
-body {
+body,
+html {
 	background-color: #f5f5f5;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	width: 100%;
 }
-/* Hide print and embed functionality */
-#BRtoolbar .embed, .print {
-    display: none;
+
+#BookReader {
+	height: 100%;
+	width: 100%;
 }
 
 div#BRnav,
