--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,7 +1,24 @@
+// import Google's open source Raleway font
+@font-face {
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 400;
+   src: local("Raleway"),local("Raleway-Regular"),url(https://fonts.gstatic.com/s/raleway/v12/1Ptug8zYS_SKggPNyCMIT4ttDfCmxA.woff2) format("woff2");
+   unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
+}
+
+@font-face {
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 400;
+   src: local("Raleway"),local("Raleway-Regular"),url(https://fonts.gstatic.com/s/raleway/v12/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2) format("woff2");
+   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
+}
+
 // with bookreader 3.0 update need to specify height/width on body, bookreader
 body,
 html {
-	background-color: #f5f5f5;
+	background-color: $light-bg-color;
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -9,11 +26,16 @@ html {
 }
 
 .BookReader {
-	background-color: #f5f5f5;
+	background-color: $light-bg-color;
+	font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
 	height: 100%;
 	width: 100%;
 }
 
 .BRemptypage {
-	background-color: #f5f5f5;
+	background-color: $light-bg-color;
+}
+
+.BRfloat {
+	font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
 }
