--- a/css/_opener.scss
+++ b/css/_opener.scss
@@ -2,47 +2,61 @@
  section in case there are no parameters in the URL
 */
 #opener {
-	margin: 5em auto;
-	width: 90%;
-	height: 50em;
-	border:1px solid rgba(125,125,125,.5);
 	background-color: #fff;
-    font-family: "Lucida Grande", "Arial", sans-serif;
+	border:1px solid rgba(125,125,125,.5);
+	font-family: $font-family;
+	height: 50em;
+	margin: 3em auto;
+	width: 90%;
 }
 
-#opener img {
+#openerLogo {
+	background: url("../cca-images/logo-large.png") no-repeat;
+	background-size: contain;
 	display: block;
+	height: 140px;
 	margin: 3em auto;
-	max-width: 100%;
+	max-width: 800px;
 }
 
 #opener p {
-	margin: 0 auto;
-	width: 500px;
 	font-size: 1.2em;
 	line-height: 1.7em;
+	margin: 0 auto 1em;
+	max-width: 600px;
 }
 
 #opener h1 {
-	width: 500px;
 	font-size: 1.55em;
 	margin: .5em auto;
+	max-width: 600px;
 	text-transform: uppercase;
 }
 
+// medium-sized screens
 @media all and (max-width:1100px) {
 	#openerLogo {
-		margin: 0 auto;
-		max-width: 95%;
+		margin: 1em;
+		max-width: 80%;
 	}
 }
 
+// small screens
 @media all and (max-width: 700px) {
 	#openerLogo {
-		background: url("../cca-images/ccatheme_logo_small.gif")
+		background: url("../cca-images/logo.png") no-repeat;
+		background-size: contain;
+		height: 80px;
 	}
-	#opener p, #opener h1 {
-		width: auto;
-		padding: 0 1.5em 0;
+
+	#opener {
+		margin: 0;
+		width: 100%;
+
+		p,
+		h1 {
+			width: auto;
+			padding: 0 1.5em 0;
 		}
+	}
 }
