--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -2,4 +2,6 @@
 $font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
 // CCA Libraries brand dark blue
 $dark-blue: #0076a0;
+$link-blue: #00a2ce;
+$purple: #721ea0;
 $light-bg-color: #f5f5f5;
