more purple updates, closes #14

--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -56,3 +56,7 @@ a.logo {
 #BRpager .ui-slider-handle {
     background-color: $purple;
 }
+
+#BRnavCntlBtm:hover {
+    background-color: $purple;
+}
