fix purple-on-purple info box link hover state

--- a/css/_dialogs.scss
+++ b/css/_dialogs.scss
@@ -18,6 +18,11 @@ a.BRinfoMoreInfo:visited {
 	color: #fff;
 }
 
+a.BRinfoMoreInfo:hover {
+	color: #fff;
+	text-decoration: underline;
+}
+
 .BRinfoMoreInfoW {
 	background-color: $purple;
 }
