update bookreader to 4.2.0
requires big overhaul of most of our CSS

--- a/css/_dialogs.scss
+++ b/css/_dialogs.scss
@@ -23,7 +23,7 @@ a.BRinfoMoreInfo:hover {
 	text-decoration: underline;
 }
 
-.BRinfoMoreInfoW {
+.BRinfoMoreInfoWrapper {
 	background-color: $purple;
 }
 
