--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,7 +1,10 @@
 // variables, colors
 $font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
+
 // CCA Libraries brand dark blue
 $dark-blue: #0076a0;
 $link-blue: #00a2ce;
 $purple: #721ea0;
 $light-bg-color: #f5f5f5;
+
+$toolbar-lineheight: 48px;
