--- a/css/_base.scss
+++ b/css/_base.scss
@@ -15,21 +15,19 @@
    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
 }
 
-// with bookreader 3.0 update need to specify height/width on body, bookreader
+// need to specify height on body, bookreader
 body,
 html {
 	background-color: $light-bg-color;
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	width: 100%;
 }
 
 .BookReader {
 	background-color: $light-bg-color;
 	font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
 	height: 100%;
-	width: 100%;
 }
 
 .BRemptypage {
@@ -40,6 +38,6 @@ html {
 	font-family: "Brown", "Raleway", "Helvetica Neue", sans-serif;
 }
 
-#BRbookcover {
+.BRbookcover {
     box-shadow: none;
 }
