--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -10,7 +10,7 @@
 
 /* CCA branded logo */
 .BookReader a.logo {
-    background: url(../cca-images/logo.png) no-repeat transparent;
+    background: url(cca-images/logo.png) no-repeat transparent;
     -webkit-background-size: cover;
     background-size: contain;
     height: 36px;
